schema/testdata/validation_reserved_action_name_authenticate/validation_reserved_action_name_authenticate_custom_function/schema.keel
model User {
    fields {
        email Text
    }

    actions {
        create authenticate() with (email)
    }
}

api Web {
    models {
        User
    }
}
