schema/testdata/errors/reserved_action_name_request_password_reset_function.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:36:E042:You have a reserved action name 'requestPasswordReset'
        create requestPasswordReset() with (email)
    }
}

api Web {
    models {
        User
    }
}
